// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleChip should render 1`] = `
<ToggleChip__Field>
  <ToggleChip__Label
    checked={false}
  >
    <ToggleChip__Input
      checked={false}
      name="test"
      onChange={[Function]}
      type="checkbox"
      value="foo"
    />
    <ToggleChip__Text
      maxWidth={30}
      title="Test chip"
    >
      Test
    </ToggleChip__Text>
  </ToggleChip__Label>
</ToggleChip__Field>
`;

exports[`ToggleChip should render checked 1`] = `
<ToggleChip__Field>
  <ToggleChip__Label
    checked={true}
  >
    <ToggleChip__Input
      checked={true}
      name="test"
      onChange={[Function]}
      type="checkbox"
      value="foo"
    />
    <ToggleChip__Text
      maxWidth={30}
      title="Test chip"
    >
      Test
    </ToggleChip__Text>
  </ToggleChip__Label>
</ToggleChip__Field>
`;
